# Clone-Website-to-Docker-Tool

./: .gitignore  CHANGELOG.md  EVENTS.md  MANIFEST.in  README.md  ROADMAP.md  VERSION.txt  ai_adapter.py  ai_chat.py  auto_retry.py  cw2dt.py  cw2dt.spec  cw2dt_core.py  cw2dt_gui.py  help_topics.json  help_viewer.py  icon.icns  pyproject.toml  requirements-dev.txt  requirements.txt  verify_checksums.py
plugin_examples/: README.md  inject_banner.py  manifest_note.py  rewrite_title.py
tests/: test_ai_adapter.py  test_ai_chat.py  test_ai_chat_helpers.py  test_auto_retry.py  test_cancellation_flag.py  test_checksums_and_diff.py  test_cleanup_behavior.py  test_cleanup_phase_behavior.py  test_cli_config_merge_json.py  test_cli_print_repro_and_dry_run.py  test_combined_capture_counts.py  test_config_loading.py  test_cw2dt_smoke.py  test_diff_delta_bytes.py  test_docker_build_failure_path.py  test_event_envelope.py  test_exit_codes.py  test_gui_extended.py  test_gui_wireup.py  test_gui_wizard_profiles.py  test_hook_script_playwright_stub.py  test_incremental_first_run_no_diff.py  test_js_stripping_stats.py  test_json_logs_and_events_file.py  test_manifest_aliases.py  test_manifest_dom_graphql_fields.py  test_manifest_full_enrichment.py  test_manifest_quota_throttle.py  test_manifest_timings.py  test_plugin_error_resilience.py  test_plugin_examples_load.py  test_plugin_finalize_manifest.py  test_plugin_modifications.py  test_prerender_missing_playwright_warning.py  test_prerender_storage_api_binary.py  test_progress_rich.py  test_readme_verification_append.py  (+11 more)
(+6 files in other folders)
